Added: Generated Feature Description

--- a/index.html
+++ b/index.html
@@ -757,7 +757,27 @@
                         permissions and assigned classes. Class teachers may have additional actions available to them,
                         such as taking attendance for their assigned students.
                     </p>
+                    <br>
+                    <h3>Teacher Panel Features:</h3>
+                    <ul>
+                        <li><a href="#feature-timetable">Timetable</a></li>
+                        <li><a href="#feature-holidays">Holiday List</a></li>
+                        <li><a href="#feature-lessons-and-topics">Lesson and Topic</a></li>
+                        <li><a href="#feature-assignments">Student Assignment</a></li>
+                        <li><a href="#feature-attendance">Attendance</a></li>
+                        <li><a href="#feature-announcements">Announcement</a></li>
+                        <li><a href="#feature-online-and-offline-exams">Online and Offline
+                                Exams</a></li>
+                    </ul>
 
+                    <br>
+                    <h3>Special Permissions:</h3>
+                    <p>
+                        In addition to the listed features, teachers can have permission to manage student details and
+                        parent data. With these special permissions, teachers can view and update student information,
+                        as well as manage parent details. This allows teachers to have a more comprehensive
+                        understanding of their students and parents details.
+                    </p>
                 </div>
             </section>
             <section class="section css-structure" id="feature-timetable">
@@ -768,8 +788,28 @@
 
                 <br />
                 <div class="sec-content">
-                    <h3>TODO ADD Timetable FEATURE EXPLANATION</h3>
-                    <br />
+                    <h3>Create Timetable</h3>
+                    <p>
+                        The admin can create the timetable for each class section from Monday to Sunday. They need to
+                        select the subject, teacher, starting time, ending time, and can add an optional note to create
+                        a timeslot on a specific day of the week in the timetable for a class section.
+                    </p>
+                    <br>
+                    <h3>Class Timetable</h3>
+                    <p>
+                        In the Class Timetable section, both the admin and teachers can view the timetable specific to
+                        each class. This provides a comprehensive overview of the schedule for a particular class,
+                        allowing teachers and administrators to plan and prepare their lessons accordingly.
+                    </p>
+                    <br>
+                    <h3>Teacher Timetable</h3>
+                    <p>
+                        In the Teacher Timetable section, the admin can view the timetable for any teacher. This allows
+                        the admin to have visibility into the schedule of each teacher within the school. Additionally,
+                        teachers themselves can access their own timetable to keep track of their assigned classes and
+                        time slots.
+                    </p>
+                    <br>
                 </div>
             </section>
             <section class="section css-structure" id="feature-holidays">
@@ -780,7 +820,25 @@
 
                 <br />
                 <div class="sec-content">
-                    <h3>TODO ADD Holidays FEATURE EXPLANATION</h3>
+
+                    <p>
+                        The admin can manage holidays from this section. To create a holiday, the admin needs to choose
+                        a date, title, and an optional description. This allows the admin to schedule and organize
+                        holidays effectively within the school calendar.
+                    </p>
+
+
+                    <p>
+                        Teachers can view the holidays from their panel, providing them with visibility into the
+                        scheduled holidays. This helps teachers plan their lessons and activities accordingly.
+                    </p>
+
+                    <p>
+                        Holidays will also be displayed to students and parents in the applications, appearing in the
+                        calendar. This ensures that students and parents are aware of upcoming holidays and can plan
+                        accordingly.
+                    </p>
+
                     <br />
                 </div>
             </section>
@@ -792,8 +850,28 @@
 
                 <br />
                 <div class="sec-content">
-                    <h3>TODO ADD Sliders FEATURE EXPLANATION</h3>
-                    <br />
+                    <p>
+                        The admin can create sliders from this screen, allowing them to showcase images on the
+                        application's home screen. These sliders serve as visual highlights and can be used to display
+                        various topics or important information to everyone.
+                    </p>
+
+                    <p>
+                        The admin have the ability to edit or delete existing sliders, providing flexibility in managing
+                        the displayed images. This feature allows for effective customization and presentation of
+                        relevant content to users.
+                    </p>
+
+                    <p>
+                        Sliders can be utilized to showcase a range of topics in the eSchool app, such as:
+                    <ul>
+                        <li>Upcoming Events and Activities</li>
+                        <li>School Achievements and Awards</li>
+                        <li>Important Announcements</li>
+                        <li>Featured Programs or Courses</li>
+                        <li>School Facilities and Resources</li>
+                    </ul>
+                    </p>
                 </div>
             </section>
             <section class="section css-structure" id="feature-announcements">
@@ -804,7 +882,38 @@
 
                 <br />
                 <div class="sec-content">
-                    <h3>TODO ADD Announcements FEATURE EXPLANATION</h3>
+                    <p>
+                        Announcements can be managed from this screen by both teachers and admins. It allows for
+                        effective communication and dissemination of important information within the school community.
+                    </p>
+
+                    <p>
+                        To create an announcement, the title is mandatory. Additionally, admins and teachers can add a
+                        description and attach multiple files to the announcement, providing detailed information and
+                        additional resources if needed.
+                    </p>
+
+                    <p>
+                        These announcements can be assigned to the notice board by the admin, ensuring that they are
+                        prominently displayed for everyone to see. Teachers can also assign announcements to their
+                        respective class sections, enabling targeted communication with specific groups of students.
+                    </p>
+
+                    <p>
+                        Students will be able to see these announcements in the application, which can help the school's
+                        principal and teachers to:
+                    <ul>
+                        <li>Share important school-wide news and updates</li>
+                        <li>Communicate changes in school policies or procedures</li>
+                        <li>Inform students about upcoming events, competitions, or workshops</li>
+                        <li>Provide resources and study materials for specific subjects or topics</li>
+                        <li>Announce academic achievements, awards, or recognition</li>
+                        <li>Remind students about assignment deadlines or exam schedules</li>
+                        <li>Promote community service opportunities or extracurricular activities</li>
+                        <li>Share safety guidelines and emergency protocols</li>
+                        <li>Celebrate special occasions and foster a sense of community</li>
+                    </ul>
+                    </p>
                     <br />
                 </div>
             </section>
@@ -840,7 +949,42 @@
 
                 <br />
                 <div class="sec-content">
-                    <h3>TODO ADD Online and Offline Exams FEATURE EXPLANATION</h3>
+                    <h3>Create Exam</h3>
+                    <p>
+                        Exams can be managed by the admin from this screen. They can create exams by providing an exam
+                        name, selecting the session year, choosing one or more classes, and adding an optional exam
+                        description. The admin has the ability to edit, delete, and publish results for exams.
+                    </p>
+                    <br />
+                    <h3>Create Exam Timetable</h3>
+                    <p>
+                        The admin can create the timetable for exams using this screen. They can select an exam, a
+                        class, a subject, total marks, passing marks, starting time, ending time, and date. Students
+                        will be able to see the exam schedule in the app, but the exams will be conducted offline on the
+                        campus.
+                    </p>
+                    <br />
+                    <h3>Exam Grade</h3>
+                    <p>
+                        From this page, the admin can create a grading system for exam percentages. They can define
+                        grade ranges based on percentage values, such as 0 to 35 = F, 36 to 50 = D, and so on. This
+                        allows for consistent and standardized evaluation of exam results.
+                    </p>
+                    <br />
+                    <h3>Upload Exam Marks (Teacher Panel Login)</h3>
+                    <p>
+                        Teachers can use this feature to enter and upload marks for students who have taken the exam.
+                        They can input the marks obtained by students for each exam.
+                    </p>
+                    <br />
+                    <h3>Student Exam Result (Teacher Panel Login)</h3>
+                    <p>
+                        Teachers can view and manage the results of students' exams here. This feature provides access
+                        to exam results on a student-by-student basis, allowing teachers to track and analyze
+                        performance.
+                    </p>
+
+                    <!-- TODO add online exams as well here -->
                     <br />
                 </div>
             </section>
