Added: Responsive iframe code

--- a/index.html
+++ b/index.html
@@ -72,7 +72,6 @@
                             </ul>
                         </li>
 
-                        <!-- TODO add Features as you go REMOVE THIS AT THE END -->
                         <!-- Application and Panel Feature List -->
                         <li class='sub-menu'><a>Features<i class='fa fa-caret-down right'></i></a>
                             <ul>
@@ -597,8 +596,16 @@
                     <h2>Academics</h2>
                 </div>
 
-                <br />
                 <div class="sec-content">
+                    <br />
+                    <div class="container-iframe">
+                        <iframe class="responsive-iframe" src="https://www.youtube.com/embed/3k_qZ0EwheY"
+                            frameborder="0" allowfullscreen>Your
+                            browser doesn't support iframes. <a href="https://www.youtube.com/watch?v=3k_qZ0EwheY">Click
+                                Here To
+                                View The Video on YouTube</a></iframe>
+                    </div>
+                    <br />
                     <h3>Mediums and Sections</h3>
                     <p>
                         The Academics feature in e-School allows the admin to define the mediums (languages) in which
