Added: Stream, shift and multi-class teacher text

--- a/index.html
+++ b/index.html
@@ -613,6 +613,17 @@
                         sections for classes, such as A, B, C, and so on.
                     </p>
                     <br>
+                    <h3>Stream and Shifts</h3>
+                    <p>
+                        Streams are used to divide classes based on subject preferences, such as Arts, Commerce, or
+                        Science. By creating streams, schools can offer specialized education and personalized learning
+                        experiences.
+                        <br>
+                        Shifts are utilized to organize classes into different time-zones, like Morning or Afternoon, to
+                        accommodate students' schedules. With shifts, schools can efficiently manage classroom
+                        capacities and balance student-teacher ratios.
+                    </p>
+                    <br>
                     <h3>Subjects</h3>
                     <p>
                         The admin can create new subjects within e-School. Each subject can be associated with one of
@@ -620,13 +631,16 @@
                         color, and image to be displayed in the application. This allows for easy organization and
                         identification of subjects across different classes.
                     </p>
+                    <br>
                     <h3>Class</h3>
                     <p>
                         In e-School, the admin can add classes by choosing the mediums and sections that each class will
                         have. For example, selecting English as the medium and A, B, C as the sections will
                         automatically create classes like 10 A English, 10 B English, and 10 C English. Similarly,
                         selecting Gujarati as the medium and A, B, C as the sections will create classes like 10 A
-                        Gujarati, 10 B Gujarati, and 10 C Gujarati.
+                        Gujarati, 10 B Gujarati, and 10 C Gujarati. Optionally a shift can be choosen for any class to
+                        indicate the time-zone it'll be taken on. There is also an option of sub-dividing classes into
+                        streams based on student's subject preference.
                     </p>
                     <br>
                     <h3>Class Assign Subject</h3>
@@ -640,8 +654,11 @@
                     <p>
                         Teachers can be assigned as class teachers for one or more classes. The class teacher plays a
                         crucial role in overseeing the overall academic progress and discipline of the students in a
-                        particular class. This feature allows for effective communication and coordination between the
-                        class teacher, students, and parents/guardians.
+                        particular class. One teacher can be class teacher of multiple classes. The class teacher can
+                        use
+                        features like attendence to take attendence of students in their class and giving offline exam
+                        Marks
+                        to the students in their class who has given the offline exam.
                     </p>
                     <br>
                     <h3>Assign Subject Teacher</h3>
@@ -654,10 +671,9 @@
                     <br>
                     <h3>Assign New Student Class</h3>
                     <p>
-                        The admin can use the "Assign New Student Class" feature to assign a
-                        new student to a specific class and class section. This feature allows for easy management of
-                        student enrollment and ensures that each student is allocated to the appropriate class and
-                        section within the school.
+                        The admin can use the this feature to assign a new student to a specific class and class
+                        section. This feature allows for easy management of student enrollment and ensures that each
+                        student is allocated to the appropriate class and section within the school.
                     </p>
                     <br>
                     <h3>Promote Student</h3>
@@ -685,9 +701,8 @@
                         image upload, class and category selection, caste, religion, blood group, height, current and
                         permanent addresses. Additionally, administrators can add information about the student's mother
                         and father, including their first names, last names, mobile number, profile image, email
-                        addresses, dates of
-                        birth,
-                        occupations, and genders. An optional guardian can also be added, including similar details.
+                        addresses, date of birth, occupations, and genders. An optional guardian can also be added,
+                        including similar details.
                     </p>
                     <br>
                     <h3>Parents Management</h3>
@@ -697,7 +712,6 @@
                         This tab serves as a central hub for managing parent information, ensuring effective
                         communication and accurate records.
                     </p>
-
                     <br>
                     <h3>Student Roll Number Assignment</h3>
                     <p>
