--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
                     <strong>By :</strong> WRTeam<br />
                     <strong>Email :</strong>
-                    <a href="mailto:wrteam.priyansh@gmail.com ">wrteam.priyansh@gmail.com</a> <br />
+                    <a href="mailto:wrteam.aayush@gmail.com ">wrteam.aayush@gmail.com</a> <br />
 
                     <br />
                     <p>
@@ -1183,10 +1183,11 @@
 
                 <br />
                 <div class="sec-content">
-                    <h4>Its our pleasure to serve our service and support. please contact our support team.</h4>
+                    <h4>Its our pleasure to serve and support our customers. Please contact our support team if you
+                        encounter any issues or have any questions related to e-School.</h4>
                     <br>
-                    <h4>Head of Customer Support : Priyansh Parmar <a href="https://join.skype.com/invite/E228Z6F4s3gB"
-                            target="_blank" style="color:#3c55d1">Skype Name : Priyansh Parmar</a></h4>
+                    <h4>Customer Support Head for e-School : <a href="https://join.skype.com/invite/vdrcOZy99P4x"
+                            target="_blank" style="color:#3c55d1">Aayush Thacker</a></h4>
                     <br>
                     <h4>To help our customers, we constantly be in touch with every customer if they need any assistance
                         regarding our product.
@@ -1276,7 +1277,7 @@
                     <h4>Visit Us : <a href="https://wrteam.in/" target="_blank">https://wrteam.in</a>
                         <br>
                     </h4>
-                    <h4>Mail Us : support@wrteam.in</h4>
+                    <h4>Mail Us : <a href="mailto:support@wrteam.in" target="_blank">support@wrteam.in</a></h4>
                     <br>
                     <h4>Thank you very much.</h4>
 
