Added: br tags and student feature details

--- a/index.html
+++ b/index.html
@@ -175,21 +175,31 @@
                     <h3 class="content-title">1. Installation Screen</h3>
                     <img src="images/admin/1.png" alt="e-School">
 
+                    <br><br>
+
                     <h3 class="content-title">2. Server Requirements & Extensions</h3>
                     <h3>If PHP version is lower than 8.0 or any extension is not installed then it will be highlighted
                         using Red color. So you need to make sure that your server meets the all requirement.</h3>
                     <img src="images/admin/2.png" alt="e-School">
+
+                    <br><br>
 
                     <h3 class="content-title">3. Permission Screen</h3>
                     <h3>Make sure this folder have read & write permissions. If not then assign this folders read &
                         write permissions.</h3>
                     <img src="images/admin/3.png" alt="e-School">
 
+                    <br><br>
+
                     <h3 class="content-title">4. Database Configuration Screen</h3>
                     <img src="images/admin/4.png" alt="e-School">
 
+                    <br><br>
+
                     <h3 class="content-title">5. Database Connection Status</h3>
                     <img src="images/admin/5.png" alt="e-School">
+
+                    <br><br>
 
                     <h3 class="content-title">6. Final installation Screen</h3>
                     <h3>If everything is configured successfully then your Admin panel has been installed
@@ -212,26 +222,36 @@
                     <h3>Set your Current & upcoming session years here, So you can manage studens by session year</h3>
                     <img src="images/admin/7.png" alt="e-School">
 
+                    <br><br>
+
                     <h3 class="content-title">2. App Settings</h3>
                     <h3>This settings will be used by your Flutter APP.</h3>
                     <img src="images/admin/8.png" alt="e-School">
+
+                    <br><br>
 
                     <h3 class="content-title">3. General Settings</h3>
                     <h3>This settings will be used by Admin Panel.You can set your current session year here.</h3>
                     <img src="images/admin/9.png" alt="e-School">
 
+                    <br><br>
+
                     <h3 class="content-title">4. FCM Server Key</h3>
                     <h3>FCM Server key will be used for APP notifications.</h3>
                     <img src="images/admin/10.png" alt="e-School">
+
+                    <br><br>
 
                     <h3 class="content-title">5. Email Configurations</h3>
                     <h3>Send Email configurations so that system can send emails to registered users.</h3>
                     <img src="images/admin/11.png" alt="e-School">
 
+                    <br><br>
+
                     <h3 class="content-title">6. Fee payment Configurations</h3>
                     <h3>Set razorpay and stripe credentials. At a time only one payment gateway will be enable</h3>
                     <img src="images/admin/12.png" alt="e-School">
-
+                    <br><br>
                     <br>
                     <h3 class="content-title">7. Payment Gateway's Webhook Configration</h3>
                     <img src="images/admin/13.jpg" alt="e-School">
@@ -305,13 +325,20 @@
                             Execute this command in your terminal<br>
                             <p class="command-style">flutter pub run change_app_package_name:main your_new_package_name
                             </p>
+                            <br>
+
                             <img src="images/app/changePackageName.png" alt="e-School">
+
+                            <br><br>
+
                         </li>
                         <li>
                             Change package name of ios app <br>
                             Open ios folder of this project in xcode. Go Select Runner->Targets->General->Identity and
                             enter new package name in Build Identifier.
-                            <br>
+
+                            <br><br>
+
                             <img src="images/app/changePackageName1.png" alt="e-School">
                         </li>
                         <!-- <li>
@@ -329,53 +356,62 @@
                     <span class="icon fa fa-at"></span>
                     <h2>Integrate with firebase</h2>
                 </div>
+                <br>
                 <ol>
                     <li>
                         <h4>
                             Create firebase project in your account
                         </h4>
                         <br>
-                        <img src="images/app/createFirebase1.jpg" alt="e-School" /><br>
-                        <img src="images/app/createFirebase2.jpg" alt="e-School" /><br>
-                        <img src="images/app/createFirebase3.jpg" alt="e-School" /><br>
-                        <img src="images/app/createFirebase4.jpg" alt="e-School" /><br>
+                        <img src="images/app/createFirebase1.jpg" alt="e-School" />
+                        <br><br>
+                        <img src="images/app/createFirebase2.jpg" alt="e-School" />
+                        <br><br>
+                        <img src="images/app/createFirebase3.jpg" alt="e-School" />
+                        <br><br>
+                        <img src="images/app/createFirebase4.jpg" alt="e-School" />
+                        <br><br>
                     </li>
                     <li>
                         <h4>
                             Add andorid application to your firebase project
                         </h4>
+                        <br><br>
                         <img src="images/app/addAndroid.jpg" alt="e-School" />
-                        <br>
+                        <br><br>
                         <h4>
                             Download the google-service.json file and add in this folder android/app/
                         </h4>
-
-                        <img src="images/app/addAndroid2.png" alt="e-School" /><br>
-
-                        <img src="images/app/addAndroid3.jpg" alt="e-School" /><br>
-                        <img src="images/app/addAndroid4.jpg" alt="e-School" /><br>
+                        <br><br>
+                        <img src="images/app/addAndroid2.png" alt="e-School" />
+                        <br><br>
+                        <img src="images/app/addAndroid3.jpg" alt="e-School" />
+                        <br><br>
+                        <img src="images/app/addAndroid4.jpg" alt="e-School" />
+                        <br><br>
                     </li>
-
-
-
                     <li>
                         <h4>Add ios application to your firebase project </h4>
+                        <br><br>
                         <img src="images/app/addIos.jpg" alt="e-School" />
+                        <br><br>
+                        <img src="images/app/addIos2.jpg" alt="e-School" />
+                        <br><br>
                     </li>
                     <li>
-                        <img src="images/app/addIos2.jpg" alt="e-School" /><br>
+
                         <h4>
                             Download GoogleService-Info.plist and add in this folder ios/Runner/
                         </h4>
-                        <img src="images/app/addIos4.jpg" alt="e-School" /><br>
-
+                        <br><br>
+                        <img src="images/app/addIos4.jpg" alt="e-School" />
+                        <br><br>
                     </li>
 
                     <li>
                         <h4>
                             Please configre this settings in-order to send ios notifications.
                             <br>
-
                         </h4>
                         <p class="command-style">https://firebase.flutter.dev/docs/messaging/apple-integration</p>
                     </li>
@@ -402,6 +438,7 @@
                     <h4>
                         Go to lib/utils/constants.dart and replace the baseUrl with your admin panel url.
                     </h4>
+                    <br><br>
                     <img src="images/app/changeDatabaseUrl.png" alt="e-School" /><br>
                     <br />
                 </div>
@@ -418,11 +455,14 @@
 
                     <h4> For Android, open android > app > src > main > res and add here your logo according to device
                         screen size </h4>
+                    <br><br>
 
                     <img src="images/app/androidAppIcon.png" alt="e-School" />
+                    <br><br>
 
                     <h4> For IOS open ios > Runner > Assets.xcassets > AppIcon.appiconset here and add your logo
                         according to diffrent size.</h4>
+                    <br><br>
                     <img src="images/app/iosAppIcon.png" alt="e-School" />
 
                     <br />
@@ -439,14 +479,15 @@
 
                     <h4> For Android, go to android/app/src/main/AndroidManifest.xml and change the app name as shown in
                         image. Replace the selected eschool text with your school name</h4>
-
+                    <br><br>
                     <img src="images/app/androidAppName.png" alt="e-School" />
 
-                    <br>
+                    <br><br>
                     <h4> For IOS open this project in xcode and enter your app name in display name field as shown in
                         image.</h4>
+                    <br><br>
                     <img src="images/app/iosAppName.png" alt="e-School" />
-                    <br>
+                    <br><br>
                 </div>
             </section>
 
@@ -462,7 +503,7 @@
                     <h4>Go to lib/utils/uiUtils.dart and return false for isDemoVersionEnable() function.</h4>
                     <br>
                     <img src="images/app/disableDemo.png" alt="e-School" />
-                    <br>
+                    <br><br>
 
 
                     <h4>Now we have setup all the necessary things it's time to run this app.</h4>
@@ -485,6 +526,7 @@
                 <div class="sec-content">
 
                     <h4>Go to lib/ui/styles/colors.dart and set your theme colors</h4>
+                    <br>
                     <img src="images/app/chaneAppTheme.png" alt="e-School" />
                     <br>
                 </div>
@@ -502,11 +544,14 @@
                     <ol>
                         <li>
                             <h4> Go to lib/app/app.dart and add your font as shown in image.</h4>
+                            <br><br>
                             <img src="images/app/changeFont.jpg" alt="e-School" />
+                            <br><br>
                         </li>
                         <li>
                             <h4>
                                 Go to assets/google_fonts/ and add .tff files of fonts.</h4>
+                            <br><br>
                             <img src="images/app/changeFont2.jpg" alt="e-School" />
                         </li>
                     </ol>
@@ -530,13 +575,17 @@
                                 image.
                                 Get your language code from here
                                 https://developers.google.com/admin-sdk/directory/v1/languages.</h4>
+                            <br><br>
                             <img src="images/app/changeDefaultLanguage.png" alt="e-School" />
+                            <br><br>
                         </li>
                         <li>
                             <h4>
                                 If your default language code is not in app language list add language details
                                 in list as shown in below image. Go to lib/utils/appLanguages.dart</h4>
+                            <br><br>
                             <img src="images/app/addLanguage.png" alt="e-School" />
+                            <br><br>
                         </li>
                         <li>
                             <h4>
@@ -544,12 +593,16 @@
                                 file
                                 in same folder with [language-code].json. Add all the labels from en.json and
                                 convert label values in your respective language</h4>
+                            <br><br>
                             <img src="images/app/addNewLanguage.jpg" alt="e-School" />
+                            <br><br>
                         </li>
                         <li>
                             <h4>
                                 Copy all the labels form en.json file in your [language-code].json file.</h4>
+                            <br><br>
                             <img src="images/app/addNewLanguage2.jpg" alt="e-School" />
+                            <br><br>
                         </li>
                         <li>
                             <h4>
@@ -570,13 +623,14 @@
 
                 <div class="sec-content">
                     <h4>How to generate release version of this product</h4>
+                    <br><br>
                     <ol>
                         <li>
-
                             <h4>To generate release android app-bundle and publish to playstore follow
                                 <a href="https://flutter.dev/docs/deployment/android"
                                     target="_blank">https://flutter.dev/docs/deployment/android</a>
                             </h4>
+                            <br><br>
                         </li>
                         <li>
                             <h4>To generate release ios apk and publish to appstore follow
@@ -703,9 +757,14 @@
                         and father, including their first names, last names, mobile number, profile image, email
                         addresses, date of birth, occupations, and genders. An optional guardian can also be added,
                         including similar details.
+                        <br><br>
+                        A student will be assigned a unique GR number automatically on admission. It will be used by the
+                        student to log in to the eSchool application with the date of birth (ddmmyyyy) as the default
+                        password. If new parents are created while admitting a new student, their email and date of
+                        birth will be their parent login details for the eSchool application.
                     </p>
                     <br>
-                    <h3>Parents Management</h3>
+                    <h3>Parents</h3>
                     <p>
                         The Parents Management section in the e-School web panel provides administrators with the
                         ability to view and modify the data of all parents associated with the students from the school.
@@ -715,8 +774,9 @@
                     <br>
                     <h3>Student Roll Number Assignment</h3>
                     <p>
-                        The Student Roll Number Assignment feature enables administrators to assign custom roll numbers
-                        to students in any class. This functionality simplifies the management and organization of
+                        The Student Roll Number Assignment feature enables administrators to easily assign first name or
+                        last name wise roll numbers to students in any class. This functionality simplifies the
+                        management and organization of
                         student records within the e-School system.
                     </p>
                     <br>
@@ -737,9 +797,8 @@
                     <h3>Reset Password</h3>
                     <p>
                         The Reset Password feature enables administrators to reset a student's login password for the
-                        e-School application. By using the student's unique GR number, administrators can modify the
-                        login password, which is required for the student to access the e-School application. The
-                        default username is the GR number, and the default password is the student's date of birth.
+                        e-School application. It resets choosen student's password to the default password which is the
+                        student's date of birth in format ddmmyyyy.
                     </p>
                     <br>
                     <h3>Add Bulk Student Data</h3>
@@ -749,7 +808,6 @@
                         required format using the "Download Dummy File" button. This functionality streamlines the
                         process of importing student data into the e-School system.
                     </p>
-
                 </div>
             </section>
             <section class="section css-structure" id="feature-teachers">
@@ -766,15 +824,13 @@
                         as first name, last name, gender, email, mobile number, optional profile image, date of birth,
                         qualification, current address, and permanent address. Additionally, administrators have the
                         option to grant teachers permission to manage student and parent data, enabling them to perform
-                        these tasks from their own panel or <a target="_blank"
-                            herf="https://codecanyon.net/item/teacher-flutter-app-eschool-virtual-school-management-system/39159458?s_rank=4">app</a>.
+                        these tasks from their own panel or app.
                     </p>
                     <p>
                         Once a new teacher is created, they can log in using the web panel with their email and password
                         (with the default password being their date of birth). Alternatively, teachers can also log in
-                        using the <a target="_blank"
-                            href="https://codecanyon.net/item/teacher-flutter-app-eschool-virtual-school-management-system/39159458?s_rank=4">teacher
-                            app</a>, which provides access to teacher-specific features based on their
+                        using the teacher
+                        app, which provides access to teacher-specific features based on their
                         permissions and assigned classes. Class teachers may have additional actions available to them,
                         such as taking attendance for their assigned students.
                     </p>
