--- a/index.html
+++ b/index.html
@@ -252,7 +252,6 @@
                     <h3>Set razorpay and stripe credentials. At a time only one payment gateway will be enable</h3>
                     <img src="images/admin/12.png" alt="e-School">
                     <br><br>
-                    <br>
                     <h3 class="content-title">7. Payment Gateway's Webhook Configration</h3>
                     <img src="images/admin/13.jpg" alt="e-School">
                     <h4 class="content-title">1. Webhook Configration for Razorpay</h4>
@@ -1283,6 +1282,17 @@
                                 respective email.</span>
                         </h4><br>
                     </div>
+                    <br><br>
+                    <h3>2. Why is the application calendar not showing any events ?</h3><br>
+                    <div style="padding-left: 18px;">
+                        <h4>
+                            All the calendars in the application will show months in the current session year which can
+                            be set from admin panel System Settings -> General Settings -> Session Year. If the current
+                            date is not in the session year, the calendars will only show the current month with today
+                            highlited and not any events. To fix the issue you can choose the correct session year or
+                            create one from admin panel Session Year screen.<br>
+                        </h4><br>
+                    </div>
                 </div>
             </section>
 
@@ -1323,7 +1333,6 @@
 
                 <br />
                 <div class="sec-content">
-                    <h4>Contact Us</h4>
                     <h4>WRTeam has creative and dedicated group of developers who are mastered in Apps Developments and
                         Web Application Development with a niche in delivering quality solutions to customers across the
                         globe.
